--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -56,26 +56,26 @@
         </div>
     </div>
     <hr class="my-4">
-    <div>
-        <table class="table">
-            <thead>
-            <tr>
-                <th>ID</th>
-                <th>글제목</th>
-                <th>작성일</th>
-                <th>작성자</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="board:${Boards}">
-                <td><a href="board/board.html" th:href="@{/board/{boardId}(boardId=${board.id})}" th:text="${board.id}"></a></td>
-                <td><a href="board/board.html" th:href="@{|/board/${board.id}|}" th:text="${board.title}">글제목</a></td>
-                <td><a href="board/board.html" th:href="@{|/board/${board.id}|}" th:text="${board.date}">작성일</a></td>
-                <td><a href="board/board.html" th:href="@{|/board/${board.id}|}" th:text="${board.member.name}">작성자</a></td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
+<!--    <div>-->
+<!--        <table class="table">-->
+<!--            <thead>-->
+<!--            <tr>-->
+<!--                <th>ID</th>-->
+<!--                <th>글제목</th>-->
+<!--                <th>작성일</th>-->
+<!--                <th>작성자</th>-->
+<!--            </tr>-->
+<!--            </thead>-->
+<!--            <tbody>-->
+<!--            <tr th:each="board:${Boards}">-->
+<!--                <td><a href="board/board.html" th:href="@{/board/{boardId}(boardId=${board.id})}" th:text="${board.id}"></a></td>-->
+<!--                <td><a href="board/board.html" th:href="@{|/board/${board.id}|}" th:text="${board.title}">글제목</a></td>-->
+<!--                <td><a href="board/board.html" th:href="@{|/board/${board.id}|}" th:text="${board.date}">작성일</a></td>-->
+<!--                <td><a href="board/board.html" th:href="@{|/board/${board.id}|}" th:text="${board.member.name}">작성자</a></td>-->
+<!--            </tr>-->
+<!--            </tbody>-->
+<!--        </table>-->
+<!--    </div>-->
 </div> <!-- /container -->
 
 </body>
