--- a/src/main/resources/templates/message/memberList.html
+++ b/src/main/resources/templates/message/memberList.html
@@ -4,29 +4,29 @@
 <body>
 <div class="container">
   <div th:replace="fragments/bodyHeader :: bodyHeader" />
-  <div>
-    <table class="table table-striped">
-      <thead>
-      <tr>
-        <th>#</th>
-        <th>이름</th>
-        <th>아이디</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr th:each="member : ${members}">
-        <td th:text="${member.id}"></td>
-        <td th:text="${member.name}"></td>
-        <td th:text="${member.loginId}"></td>
-        <td th:text="${member.loginId}"></td>
-        <button class="btn btn-primary float-end"
-                th:onclick="|location.href='@{/logout}'|"
-                onclick="location.href='main.html'"
-                type="button">로그아웃</button>
-      </tr>
-      </tbody>
-    </table>
-  </div>
+<!--  <div>-->
+<!--    <table class="table table-striped">-->
+<!--      <thead>-->
+<!--      <tr>-->
+<!--        <th>#</th>-->
+<!--        <th>이름</th>-->
+<!--        <th>아이디</th>-->
+<!--      </tr>-->
+<!--      </thead>-->
+<!--      <tbody>-->
+<!--      <tr th:each="member : ${members}">-->
+<!--        <td th:text="${member.id}"></td>-->
+<!--        <td th:text="${member.name}"></td>-->
+<!--        <td th:text="${member.loginId}"></td>-->
+<!--        <td th:text="${member.loginId}"></td>-->
+<!--        <button class="btn btn-primary float-end"-->
+<!--                th:onclick="|location.href='@{/logout}'|"-->
+<!--                onclick="location.href='main.html'"-->
+<!--                type="button">로그아웃</button>-->
+<!--      </tr>-->
+<!--      </tbody>-->
+<!--    </table>-->
+<!--  </div>-->
   <div th:replace="fragments/footer :: footer" />
 </div> <!-- /container -->
 </body>
