--- a/src/main/resources/templates/message/memberList.html
+++ b/src/main/resources/templates/message/memberList.html
@@ -6,7 +6,7 @@
   <div th:replace="fragments/bodyHeader :: bodyHeader" />
 <!--  <div>-->
 <!--    <table class="table table-striped">-->
-<!--      <thead>-->
+<!--      <post>-->
 <!--      <tr>-->
 <!--        <th>#</th>-->
 <!--        <th>이름</th>-->
@@ -21,7 +21,7 @@
 <!--        <td th:text="${member.loginId}"></td>-->
 <!--        <button class="btn btn-primary float-end"-->
 <!--                th:onclick="|location.href='@{/logout}'|"-->
-<!--                onclick="location.href='main.html'"-->
+<!--                onclick="location.href='rooms.html'"-->
 <!--                type="button">로그아웃</button>-->
 <!--      </tr>-->
 <!--      </tbody>-->
